Fix for Trimble logo not showing on Storybook site (#1458)

--- a/stencil-workspace/storybook/public/storybook-styles.css
+++ b/stencil-workspace/storybook/public/storybook-styles.css
@@ -40,8 +40,8 @@ body.sb-show-main,
 .sbdocs-li,
 .sbdocs-p,
 .sbdocs-ul {
-  color: var(--theme-color) !important;
   background-color: var(--theme-bg-color) !important;
+  color: var(--theme-color) !important;
 }
 
 .sbdocs-h1 + h2:not(.sbdocs-h2),
@@ -59,10 +59,10 @@ hr {
 }
 
 .sbdocs-table thead tr th {
-  color: var(--theme-color);
   background-color: var(--theme-sbdocs-table-head-bg-color);
   border: 1px solid var(--theme-sbdocs-table-border-color);
   border-bottom-width: 2px;
+  color: var(--theme-color);
   font-weight: 600;
   text-align: left;
 }
@@ -81,8 +81,8 @@ hr {
 }
 
 .docblock-source {
-  color: var(--theme-docblock-source-color) !important;
   background-color: var(--theme-docblock-source-bg-color) !important;
+  color: var(--theme-docblock-source-color) !important;
 }
 
 [data-mwc-theme="dark"] .docblock-source pre span,
@@ -117,7 +117,21 @@ pre .os-content {
 }
 
 code {
-  color: var(--theme-code-color) !important;
   background-color: var(--theme-code-bg-color) !important;
   border-color: var(--theme-code-border-color) !important;
+  color: var(--theme-code-color) !important;
+}
+
+.sidebar-header a[title="Storybook"] {
+  background-image: url("/trimble-logo.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+body.dark .sidebar-header a[title="Storybook"] {
+  filter: invert(1) brightness(999%) saturate(0);
+}
+
+.sidebar-header a[title="Storybook"] svg {
+  opacity: 0;
 }
